# BoostMultiDex

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle  maindex-keep.pro
app/src/androidTest/java/com/bytedance/app/boost_multidex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/bytedance/app/boost_multidex/: MainActivity.java  MainApplication.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/bytedance/app/boost_multidex/: ExampleUnitTest.java
boost_multidex/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
boost_multidex/src/androidTest/java/com/bytedance/boost_multidex/: ExampleInstrumentedTest.java
boost_multidex/src/main/: AndroidManifest.xml
boost_multidex/src/main/cpp/: boost_multidex.cpp
boost_multidex/src/main/java/com/bytedance/boost_multidex/: BoostMultiDex.java  BoostMultiDexApplication.java  BoostNative.java  Constants.java  DexHolder.java  DexInstallProcessor.java  DexLoader.java  Locker.java  Monitor.java  OptimizeService.java  Result.java  Utility.java
boost_multidex/src/main/res/values/: strings.xml
boost_multidex/src/test/java/com/bytedance/boost_multidex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
